# evm-wallet-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: handlers.rs  main.rs  provider.rs  routes.rs  wallet.rs
