[package]
name = "evm-wallet-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.14"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
bip39 = "2.2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
